kubernetes/JWT-ACL/ingress-jwt.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chuck-quote-services
  annotations:
    konghq.com/strip-path: "true"
    kubernetes.io/ingress.class: kong
    konghq.com/plugins: app-jwt
  namespace: default    
spec:
  rules:
    - http:
        paths:
          - path: /chuck
            pathType: Prefix
            backend:
              service:
                name: chuck-quote-service
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: back2future-ingress
  annotations:
    konghq.com/strip-path: "true"
    kubernetes.io/ingress.class: kong
    konghq.com/plugins: app-jwt
  namespace: default    
spec:
  rules:
    - http:
        paths:
          - path: /back2future
            pathType: Prefix
            backend:
              service:
                name: back2future-quote-service
                port:
                  number: 80
